fixed spacing

--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -105,19 +105,19 @@ nav ul li:hover {
 
 
 .carousel {
-    height: 500px ;
+    height: 500px !important;
     background-color: rgba(0, 51,68, .5);
 }
 
 .carousel .carousel-item {
     height: auto !important;
-    width: auto  !important;
+    width: auto !important;
 }
 
 .card{
-  width:250px ;
-  height:auto ;
-  margin: 0 ;
+  width:250px !important;
+  height:auto !important;
+  margin: 0 !important;
 }
 .card-content h5{
     font-size: 14px;
